# TeamPatrolling

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  MultipleExperimentsRunner.sh  README.md  StandardDefinitionVehicle.yaml  answers.txt
VehicleInputs/: StandardDefinitionVehicle.yaml
inc/: ActionSwapper.h  Agent.h  ClusteringAlgorithm.h  DepletedSolver.h  LaunchOptimizer.h  LaunchOptimizerOBS.h  OMPL_RRTSTAR.h  PatrollingInput.h  SOCTypes.h  Solution.h  Solver.h  Solver_Baseline.h  Solver_BaselineOBS.h  Solver_Depleted.h  Solver_Greedy.h  Solver_ILO.h  Solver_LLS.h  Solver_LLS_OBS.h  Solver_LOIRS.h  Solver_LORS.h  Solver_OBS.h  Solver_OptLaunch.h  UAV.h  UGV.h  VRPSolver.h  defines.h
src/: ActionSwapper.cpp  ClusteringAlgorithm.cpp  DepletedSolver.cpp  KMeansSolver.cpp  LaunchOptimizer.cpp  LaunchOptimizerOBS.cpp  OMPL_RRTSTAR.cpp  PatrollingInput.cpp  Roots.cpp  Solution.cpp  Solver.cpp  Solver_Baseline.cpp  Solver_BaselineOBS.cpp  Solver_Depleted.cpp  Solver_Greedy.cpp  Solver_ILO.cpp  Solver_LLS.cpp  Solver_LLS_OBS.cpp  Solver_LOIRS.cpp  Solver_LORS.cpp  Solver_OBS.cpp  Solver_OptLaunch.cpp  UAV.cpp  UGV.cpp  VRPSolver.cpp  gurobi_test.cpp  main.cpp
test/: answer_grapher.py  graphing_tool.py  graphing_tool_II.py  input_creater.py  input_generator.py
test/ExpOutputs/: Exp1_Baseline.txt
test/Exp_01/: plot_1_2_100_1.yaml  plot_1_2_100_10.yaml  plot_1_2_100_12.yaml  plot_1_2_100_13.yaml  plot_1_2_100_15.yaml  plot_1_2_100_2.yaml  plot_1_2_100_21.yaml  plot_1_2_100_24.yaml  plot_1_2_100_32.yaml  plot_1_2_100_33.yaml  plot_1_2_100_34.yaml  plot_1_2_100_35.yaml  plot_1_2_100_37.yaml  plot_1_2_100_40.yaml  plot_1_2_100_43.yaml  plot_1_2_100_45.yaml  plot_1_2_100_46.yaml  plot_1_2_100_49.yaml  plot_1_2_100_5.yaml  plot_1_2_100_50.yaml  plot_1_2_100_7.yaml  plot_1_2_10_10.yaml  plot_1_2_10_11.yaml  plot_1_2_10_15.yaml  plot_1_2_10_16.yaml  plot_1_2_10_19.yaml  plot_1_2_10_2.yaml  plot_1_2_10_20.yaml  plot_1_2_10_21.yaml  plot_1_2_10_23.yaml  plot_1_2_10_24.yaml  plot_1_2_10_25.yaml  plot_1_2_10_29.yaml  plot_1_2_10_3.yaml  plot_1_2_10_31.yaml  plot_1_2_10_35.yaml  plot_1_2_10_39.yaml  plot_1_2_10_40.yaml  plot_1_2_10_43.yaml  plot_1_2_10_46.yaml  (+441 more)
test/Exp_02/: FixedHPP.tsp  LKH_run-output.txt  WSN_TSP.tsp  input_maker.py
test/IncDrones/: plot_1_10_50_0.yaml  plot_1_10_50_1.yaml  plot_1_10_50_10.yaml  plot_1_10_50_11.yaml  plot_1_10_50_12.yaml  plot_1_10_50_13.yaml  plot_1_10_50_14.yaml  plot_1_10_50_15.yaml  plot_1_10_50_16.yaml  plot_1_10_50_17.yaml  plot_1_10_50_18.yaml  plot_1_10_50_19.yaml  plot_1_10_50_2.yaml  plot_1_10_50_20.yaml  plot_1_10_50_21.yaml  plot_1_10_50_22.yaml  plot_1_10_50_23.yaml  plot_1_10_50_24.yaml  plot_1_10_50_25.yaml  plot_1_10_50_26.yaml  plot_1_10_50_27.yaml  plot_1_10_50_28.yaml  plot_1_10_50_29.yaml  plot_1_10_50_3.yaml  plot_1_10_50_30.yaml  plot_1_10_50_31.yaml  plot_1_10_50_32.yaml  plot_1_10_50_33.yaml  plot_1_10_50_34.yaml  plot_1_10_50_35.yaml  plot_1_10_50_36.yaml  plot_1_10_50_37.yaml  plot_1_10_50_38.yaml  plot_1_10_50_39.yaml  plot_1_10_50_4.yaml  plot_1_10_50_40.yaml  plot_1_10_50_41.yaml  plot_1_10_50_42.yaml  plot_1_10_50_43.yaml  plot_1_10_50_44.yaml  (+460 more)
test/IncNodes/: plot_2_4_100_0.yaml  (+999 more)
(+4138 files in other folders)
